src/tests/test-src/errors/E31-no-return.syntran
// E31: no-return
// A non-void function has no return statements at all

fn f(): i32
{
	let x = 1;
}
